other bug fixes

--- a/Clonechat_Telegram_Colab.ipynb
+++ b/Clonechat_Telegram_Colab.ipynb
@@ -1,27 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP/G4I92EcMKKBcVITyMIBf",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Drrivao/Clonechat-Telegram-Colab/blob/main/Clonechat_Telegram_Colab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -29,6 +12,12 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
+        "id": "ytg4-4lmAhvs"
+      },
+      "outputs": [],
       "source": [
         "#@title *Start*\n",
         "import os\n",
@@ -47,16 +36,16 @@
         "  os.system('pip install pyrogram tgcrypto')\n",
         "\n",
         "%cd /content/drive/MyDrive/'Clonechat-Telegram-Colab'"
-      ],
-      "metadata": {
-        "id": "ytg4-4lmAhvs",
-        "cellView": "form"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
+        "id": "P_vhraErvs9s"
+      },
+      "outputs": [],
       "source": [
         "#@title *Credenciais*\n",
         "\n",
@@ -64,22 +53,22 @@
         "API_HASH=\"PUT YOUR API HASH HERE\" #@param {type:\"string\"}\n",
         "BOT_TOKEN=\"PUT YOUR BOT TOKEN HERE\" #@param {type:\"string\"}\n",
         "\n",
-        "if BOT_TOKEN == \"\": BOT_TOKEN='blank'\n",
+        "if BOT_TOKEN == \"\" or \"PUT YOUR BOT TOKEN HERE\": BOT_TOKEN='blank'\n",
         "\n",
         "!python configs.py \\\n",
         "--api_id $API_ID \\\n",
         "--api_hash $API_HASH \\\n",
         "--bot_token $BOT_TOKEN"
-      ],
-      "metadata": {
-        "cellView": "form",
-        "id": "P_vhraErvs9s"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
+        "id": "1koiNrYQ9POu"
+      },
+      "outputs": [],
       "source": [
         "#@title  *Clonar canal*\n",
         "\n",
@@ -101,13 +90,24 @@
         "flag_E=f\"--new {NEW}\"\n",
         "\n",
         "!python clonechat.py $flag_A $flag_B $flag_C $flag_D $flag_E"
-      ],
-      "metadata": {
-        "cellView": "form",
-        "id": "1koiNrYQ9POu"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyP/G4I92EcMKKBcVITyMIBf",
+      "collapsed_sections": [],
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
