--- a/Clonechat_Telegram_Colab.ipynb
+++ b/Clonechat_Telegram_Colab.ipynb
@@ -53,7 +53,8 @@
         "API_HASH=\"PUT YOUR API HASH HERE\" #@param {type:\"string\"}\n",
         "BOT_TOKEN=\"PUT YOUR BOT TOKEN HERE\" #@param {type:\"string\"}\n",
         "\n",
-        "if BOT_TOKEN == \"\" or \"PUT YOUR BOT TOKEN HERE\": BOT_TOKEN='blank'\n",
+        "if BOT_TOKEN == \"\" or BOT_TOKEN == \"PUT YOUR BOT TOKEN HERE\":\n",
+        "    BOT_TOKEN='blank'\n",
         "\n",
         "!python configs.py \\\n",
         "--api_id $API_ID \\\n",
