code optimization and new features

--- a/Clonechat_Telegram_Colab.ipynb
+++ b/Clonechat_Telegram_Colab.ipynb
@@ -79,6 +79,7 @@
         "MODE=\"user\" #@param [\"user\",\"bot\"]\n",
         "NEW = 1 #@param [\"1\", \"2\"] {type:\"raw\"}\n",
         "TYPE = 0 #@param [\"0\", \"1\", \"2\", \"3\", \"4\", \"5\", \"6\", \"7\", \"8\", \"9\"] {type:\"raw\", allow-input: true}\n",
+        "LIMIT = 0 #@param {type:\"integer\"}\n",
         "\n",
         "if DEST is None: flag_B=''\n",
         "else: flag_B=f\"--dest '{DEST}'\"\n",
@@ -86,11 +87,9 @@
         "if TYPE is None: flag_C=''\n",
         "else: flag_C=f\"--type '{TYPE}'\"\n",
         "\n",
-        "flag_A=f\"--orig '{ORIG}'\"\n",
-        "flag_D=f\"--mode {MODE}\"\n",
-        "flag_E=f\"--new {NEW}\"\n",
+        "if LIMIT < 0: LIMIT*-1\n",
         "\n",
-        "!python clonechat.py $flag_A $flag_B $flag_C $flag_D $flag_E"
+        "!python clonechat.py --orig $ORIG $flag_B $flag_C --mode $MODE --new $NEW --limit $LIMIT"
       ]
     }
   ],
