--- a/Clonechat_Telegram_Colab.ipynb
+++ b/Clonechat_Telegram_Colab.ipynb
@@ -74,14 +74,14 @@
         "#@title  *Clonar canal*\n",
         "\n",
         "ORIG = \"NOME DO CANAL PARA CLONAR\" #@param {type:\"raw\"}\n",
-        "DEST = \"NOME DO CANAL DE DESTINO\" #@param {type:\"raw\"}\n",
+        "DEST = \"NOME DO CANAL DE DESTINO\" #@param [\"\\\"auto\\\"\"] {type:\"raw\", allow-input: true}\n",
         "\n",
         "MODE=\"user\" #@param [\"user\",\"bot\"]\n",
         "NEW = 1 #@param [\"1\", \"2\"] {type:\"raw\"}\n",
         "TYPE = 0 #@param [\"0\", \"1\", \"2\", \"3\", \"4\", \"5\", \"6\", \"7\", \"8\", \"9\"] {type:\"raw\", allow-input: true}\n",
         "LIMIT = 0 #@param {type:\"integer\"}\n",
         "\n",
-        "if DEST is None: flag_B=''\n",
+        "if DEST=='auto': flag_B=''\n",
         "else: flag_B=f\"--dest '{DEST}'\"\n",
         "\n",
         "if TYPE is None: flag_C=''\n",
