codes more clean

--- a/Clonechat_Telegram_Colab.ipynb
+++ b/Clonechat_Telegram_Colab.ipynb
@@ -20,22 +20,27 @@
       "outputs": [],
       "source": [
         "#@title *Start*\n",
-        "import os\n",
+        "from os.path import (\n",
+        "  join,exists,split\n",
+        ")\n",
+        "from subprocess import run\n",
         "from google.colab import drive\n",
         "\n",
-        "if not os.path.exists('/content/drive'):\n",
-        "  drive.mount('/content/drive')\n",
+        "dir=\"/content/drive/MyDrive/Clonechat-Telegram-Colab\"\n",
+        "dir_=split(dir)[0]\n",
         "\n",
-        "if not os.path.exists('/content/drive/MyDrive/Clonechat-Telegram-Colab'):\n",
-        "  os.system(\n",
-        "      'git clone https://github.com/Drrivao/Clonechat-Telegram-Colab;\\\n",
-        "      mv /content/Clonechat-Telegram-Colab /content/drive/MyDrive/'\n",
-        "  )\n",
+        "cmd1='git clone https://github.com/Drrivao/Clonechat-Telegram-Colab'\n",
+        "cmd2='pip install pyrogram tgcrypto'\n",
+        "cmd3='mv Clonechat-Telegram-Colab /content/drive/MyDrive'\n",
         "\n",
-        "if not os.path.exists('/usr/local/lib/python3.7/dist-packages/pyrogram'):\n",
-        "  os.system('pip install pyrogram tgcrypto')\n",
+        "if not exists(dir_):\n",
+        "  drive.mount(dir_)\n",
+        "if not exists(dir):\n",
+        "  for i in [cmd1,cmd2,cmd3]:\n",
+        "    run(i,shell=True)\n",
+        "else:run(cmd2)\n",
         "\n",
-        "%cd /content/drive/MyDrive/'Clonechat-Telegram-Colab'"
+        "%cd $dir"
       ]
     },
     {
@@ -56,9 +61,7 @@
         "if BOT_TOKEN == \"\" or BOT_TOKEN == \"PUT YOUR BOT TOKEN HERE\":\n",
         "    BOT_TOKEN='blank'\n",
         "\n",
-        "!python configs.py \\\n",
-        "--api_id $API_ID \\\n",
-        "--api_hash $API_HASH \\\n",
+        "!python configs.py --api_id $API_ID --api_hash $API_HASH \\\n",
         "--bot_token $BOT_TOKEN"
       ]
     },
@@ -81,15 +84,12 @@
         "TYPE = 0 #@param [\"0\", \"1\", \"2\", \"3\", \"4\", \"5\", \"6\", \"7\", \"8\", \"9\"] {type:\"raw\", allow-input: true}\n",
         "LIMIT = 0 #@param {type:\"integer\"}\n",
         "\n",
-        "if DEST=='auto': flag_B=''\n",
-        "else: flag_B=f\"--dest '{DEST}'\"\n",
-        "\n",
-        "if TYPE is None: flag_C=''\n",
-        "else: flag_C=f\"--type '{TYPE}'\"\n",
-        "\n",
+        "DEST=f\"'{DEST}'\"\n",
+        "TYPE=f\"'{TYPE}'\"\n",
         "if LIMIT < 0: LIMIT*-1\n",
         "\n",
-        "!python clonechat.py --orig $ORIG $flag_B $flag_C --mode $MODE --new $NEW --limit $LIMIT"
+        "!python clonechat.py --orig $ORIG --dest $DEST --type $TYPE \\\n",
+        "--mode $MODE --new $NEW --limit $LIMIT"
       ]
     }
   ],
