--- a/Clonechat_Telegram_Colab.ipynb
+++ b/Clonechat_Telegram_Colab.ipynb
@@ -38,7 +38,7 @@
         "if not exists(dir):\n",
         "  for i in [cmd1,cmd2,cmd3]:\n",
         "    run(i,shell=True)\n",
-        "else:run(cmd2)\n",
+        "else:run(cmd2,shell=True)\n",
         "\n",
         "%cd $dir"
       ]
@@ -60,6 +60,10 @@
         "\n",
         "if BOT_TOKEN == \"\" or BOT_TOKEN == \"PUT YOUR BOT TOKEN HERE\":\n",
         "    BOT_TOKEN='blank'\n",
+        "else:BOT_TOKEN=f\"'{BOT_TOKEN}'\"\n",
+        "\n",
+        "API_ID=f\"'{API_ID}'\"\n",
+        "API_HASH=f\"'{API_HASH}'\"\n",
         "\n",
         "!python configs.py --api_id $API_ID --api_hash $API_HASH \\\n",
         "--bot_token $BOT_TOKEN"
@@ -84,6 +88,7 @@
         "TYPE = 0 #@param [\"0\", \"1\", \"2\", \"3\", \"4\", \"5\", \"6\", \"7\", \"8\", \"9\"] {type:\"raw\", allow-input: true}\n",
         "LIMIT = 0 #@param {type:\"integer\"}\n",
         "\n",
+        "ORIG=f\"'{ORIG}'\"\n",
         "DEST=f\"'{DEST}'\"\n",
         "TYPE=f\"'{TYPE}'\"\n",
         "if LIMIT < 0: LIMIT*-1\n",
