--- a/Clonechat_Telegram_Colab.ipynb
+++ b/Clonechat_Telegram_Colab.ipynb
@@ -86,15 +86,17 @@
         "MODE=\"user\" #@param [\"user\",\"bot\"]\n",
         "NEW = 1 #@param [\"1\", \"2\"] {type:\"raw\"}\n",
         "TYPE = 0 #@param [\"0\", \"1\", \"2\", \"3\", \"4\", \"5\", \"6\", \"7\", \"8\", \"9\"] {type:\"raw\", allow-input: true}\n",
+        "QUERY = \"all\" #@param [\"\\\"all\\\"\"] {type:\"raw\", allow-input: true}\n",
         "LIMIT = 0 #@param {type:\"integer\"}\n",
         "\n",
         "ORIG=f\"'{ORIG}'\"\n",
         "DEST=f\"'{DEST}'\"\n",
         "TYPE=f\"'{TYPE}'\"\n",
+        "QUERY=f\"'{QUERY}'\"\n",
         "if LIMIT < 0: LIMIT*-1\n",
         "\n",
         "!python clonechat.py --orig $ORIG --dest $DEST --type $TYPE \\\n",
-        "--mode $MODE --new $NEW --limit $LIMIT"
+        "--mode $MODE --new $NEW --query $QUERY --limit $LIMIT"
       ]
     }
   ],
