muont drive bug fixed

--- a/Clonechat_Telegram_Colab.ipynb
+++ b/Clonechat_Telegram_Colab.ipynb
@@ -27,14 +27,13 @@
         "from google.colab import drive\n",
         "\n",
         "dir=\"/content/drive/MyDrive/Clonechat-Telegram-Colab\"\n",
-        "dir_=split(dir)[0]\n",
         "\n",
         "cmd1='git clone https://github.com/Drrivao/Clonechat-Telegram-Colab'\n",
         "cmd2='pip install pyrogram tgcrypto'\n",
         "cmd3='mv Clonechat-Telegram-Colab /content/drive/MyDrive'\n",
         "\n",
-        "if not exists(dir_):\n",
-        "  drive.mount(dir_)\n",
+        "drive.mount('/content/drive')\n",
+        "\n",
         "if not exists(dir):\n",
         "  for i in [cmd1,cmd2,cmd3]:\n",
         "    run(i,shell=True)\n",
