--- a/Clonechat_Telegram_Colab.ipynb
+++ b/Clonechat_Telegram_Colab.ipynb
@@ -26,13 +26,12 @@
         "from subprocess import run\n",
         "from google.colab import drive\n",
         "\n",
-        "dir=\"/content/drive/MyDrive/Clonechat-Telegram-Colab\"\n",
+        "drive.mount('/content/drive/')\n",
         "\n",
+        "dir=\"/content/drive/MyDrive/Clonechat-Telegram-Colab\"\n",
         "cmd1='git clone https://github.com/Drrivao/Clonechat-Telegram-Colab'\n",
         "cmd2='pip install pyrogram tgcrypto'\n",
         "cmd3='mv Clonechat-Telegram-Colab /content/drive/MyDrive'\n",
-        "\n",
-        "drive.mount('/content/drive')\n",
         "\n",
         "if not exists(dir):\n",
         "  for i in [cmd1,cmd2,cmd3]:\n",
@@ -57,8 +56,8 @@
         "API_HASH=\"PUT YOUR API HASH HERE\" #@param {type:\"string\"}\n",
         "BOT_TOKEN=\"PUT YOUR BOT TOKEN HERE\" #@param {type:\"string\"}\n",
         "\n",
-        "if BOT_TOKEN == \"\" or BOT_TOKEN == \"PUT YOUR BOT TOKEN HERE\":\n",
-        "    BOT_TOKEN='blank'\n",
+        "if BOT_TOKEN == \"\" or BOT_TOKEN == \\\n",
+        "\"PUT YOUR BOT TOKEN HERE\":BOT_TOKEN='blank'\n",
         "else:BOT_TOKEN=f\"'{BOT_TOKEN}'\"\n",
         "\n",
         "API_ID=f\"'{API_ID}'\"\n",
