--- a/Clonechat_Telegram_Colab.ipynb
+++ b/Clonechat_Telegram_Colab.ipynb
@@ -83,7 +83,7 @@
         "\n",
         "MODE=\"user\" #@param [\"user\",\"bot\"]\n",
         "NEW = 1 #@param [\"1\", \"2\"] {type:\"raw\"}\n",
-        "TYPE = \"all types\" #@param [\"all types\", \"photo\", \"text\", \"document\", \"sticker\", \"animation\", \"audio\", \"voice\", \"video\", \"poll\"] {type:\"raw\", allow-input: true}\n",
+        "TYPE = \"all types\" #@param [\"all types\", \"photo\", \"text\", \"document\", \"sticker\", \"animation\", \"audio\", \"voice\", \"video\", \"poll\"] {allow-input: true}\n",
         "QUERY = \"all\" #@param [\"\\\"all\\\"\"] {type:\"raw\", allow-input: true}\n",
         "LIMIT = 0 #@param {type:\"integer\"}\n",
         "\n",
@@ -93,7 +93,7 @@
         "QUERY=f\"'{QUERY}'\"\n",
         "if LIMIT < 0: LIMIT*-1\n",
         "\n",
-        "!python clonechat.py --orig $ORIG --dest $DEST --type $TYPE \\\n",
+        "!python clonechat_colab.py --no-auth --orig $ORIG --dest $DEST --type $TYPE \\\n",
         "--mode $MODE --new $NEW --query $QUERY --limit $LIMIT"
       ]
     }
