--- a/Clonechat_Telegram_Colab.ipynb
+++ b/Clonechat_Telegram_Colab.ipynb
@@ -91,7 +91,7 @@
         "DEST=f\"'{DEST}'\"\n",
         "TYPE=f\"'{TYPE}'\"\n",
         "QUERY=f\"'{QUERY}'\"\n",
-        "if LIMIT < 0: LIMIT*-1\n",
+        "if LIMIT < 0: LIMIT=LIMIT*-1\n",
         "\n",
         "!python clonechat_colab.py --no-auth --orig $ORIG --dest $DEST --type $TYPE \\\n",
         "--mode $MODE --new $NEW --query $QUERY --limit $LIMIT"
