--- a/Auto_Forward_Messages.ipynb
+++ b/Auto_Forward_Messages.ipynb
@@ -28,13 +28,13 @@
         "from google.colab import drive\n",
         "\n",
         "drive.mount('/content/drive/')\n",
-        "dir=\"/content/drive/MyDrive/Auto-Forward-Messages\"\n",
+        "dir=\"/content/drive/MyDrive/Clonechat-Telegram-Colab\"\n",
         "\n",
         "cmd1=\"add-apt-repository ppa:deadsnakes/ppa;apt-get update;apt-get install python3.11;\"+\\\n",
         "\"apt-get install python3.11-dev;wget https://bootstrap.pypa.io/get-pip.py && python3.11 get-pip.py\"\n",
-        "cmd2='git clone https://github.com/Drrivao/Auto-Forward-Messages'\n",
+        "cmd2='git clone https://github.com/Drrivao/Clonechat-Telegram-Colab'\n",
         "cmd3='python3.11 -m pip install tgcrypto https://github.com/Drrivao/pyrogram/archive/refs/heads/master.zip'\n",
-        "cmd4='mv Auto-Forward-Messages /content/drive/MyDrive'\n",
+        "cmd4='mv Clonechat-Telegram-Colab /content/drive/MyDrive'\n",
         "\n",
         "run(cmd1,shell=True)\n",
         "if not exists(dir):\n",
