--- a/Auto_Forward_Messages.ipynb
+++ b/Auto_Forward_Messages.ipynb
@@ -112,7 +112,7 @@
         "is not None else \"\"\n",
         "RESUME=f\"-r\" if RESUME\\\n",
         "is True else \"\"\n",
-        "LIVE=f\"-u\" if LIVE\\\n",
+        "LIVE=f\"-k\" if LIVE\\\n",
         "is True else \"\"\n",
         "LIMIT=f\"-l {LIMIT}\"\n",
         "FILTER=f\"-f '{FILTER}'\" if FILTER\\\n",
