--- a/Auto_Forward_Messages.ipynb
+++ b/Auto_Forward_Messages.ipynb
@@ -68,9 +68,9 @@
       "source": [
         "#@title *Credenciais*\n",
         "\n",
-        "API_ID=\"YOUR API ID HERE\" #@param {type:\"string\"}\n",
-        "API_HASH=\"YOUR API HASH HERE\" #@param {type:\"string\"}\n",
-        "BOT_TOKEN=\"YOUR BOT TOKEN HERE\" #@param {type:\"string\"}\n",
+        "API_ID=\"SUA API ID\" #@param {type:\"string\"}\n",
+        "API_HASH=\"SUA API HASH\" #@param {type:\"string\"}\n",
+        "BOT_TOKEN=\"SEU BOT TOKEN\" #@param {type:\"string\"}\n",
         "\n",
         "if BOT_TOKEN == \"YOUR BOT TOKEN HERE\"\\\n",
         "or BOT_TOKEN == \"\":BOT_TOKEN=\"\"\n",
@@ -94,7 +94,7 @@
         "#@title  *Clonar canal*\n",
         "\n",
         "ORIG = \"ORIGIN CHAT TITLE\" #@param {type:\"raw\"}\n",
-        "DEST = \"DESTINATION CHAT TITLE (LET IT EMPTY TO CREATE A NEW CHANNEL)\" #@param [\"\\\"auto\\\"\"] {type:\"raw\", allow-input: true}\n",
+        "DEST = \"DESTINATION CHAT TITLE (LET IT EMPTY TO CREATE A NEW CHANNEL)\" #@param {type:\"raw\"}\n",
         "\n",
         "MODE=\"user\" #@param [\"user\",\"bot\"]\n",
         "FILTER = \"all types\" #@param [\"all types\", \"photo\", \"text\", \"document\", \"sticker\", \"animation\", \"audio\", \"voice\", \"video\", \"poll\"] {allow-input: true}\n",
