--- a/Auto_Forward_Messages.ipynb
+++ b/Auto_Forward_Messages.ipynb
@@ -68,9 +68,9 @@
       "source": [
         "#@title *Credenciais*\n",
         "\n",
-        "API_ID=\"SUA API ID\" #@param {type:\"string\"}\n",
-        "API_HASH=\"SUA API HASH\" #@param {type:\"string\"}\n",
-        "BOT_TOKEN=\"SEU BOT TOKEN\" #@param {type:\"string\"}\n",
+        "API_ID=\"YOUR SUA API ID HERE\" #@param {type:\"string\"}\n",
+        "API_HASH=\"YOUR API HASH HERE\" #@param {type:\"string\"}\n",
+        "BOT_TOKEN=\"YOUR BOT TOKEN HERE\" #@param {type:\"string\"}\n",
         "\n",
         "if BOT_TOKEN == \"YOUR BOT TOKEN HERE\"\\\n",
         "or BOT_TOKEN == \"\":BOT_TOKEN=\"\"\n",
