--- a/Auto_Forward_Messages.ipynb
+++ b/Auto_Forward_Messages.ipynb
@@ -68,7 +68,7 @@
       "source": [
         "#@title *Credenciais*\n",
         "\n",
-        "API_ID=\"YOUR SUA API ID HERE\" #@param {type:\"string\"}\n",
+        "API_ID=\"YOUR API ID HERE\" #@param {type:\"string\"}\n",
         "API_HASH=\"YOUR API HASH HERE\" #@param {type:\"string\"}\n",
         "BOT_TOKEN=\"YOUR BOT TOKEN HERE\" #@param {type:\"string\"}\n",
         "\n",
