"keep alive" replaced by "restart"

--- a/Auto_Forward_Messages.ipynb
+++ b/Auto_Forward_Messages.ipynb
@@ -101,7 +101,7 @@
         "QUERY = None #@param [] {type:\"raw\", allow-input: true}\n",
         "LIMIT = 0 #@param {type:\"integer\"}\n",
         "RESUME = True #@param {type:\"boolean\"}\n",
-        "LIVE = False #@param {type:\"boolean\"}\n",
+        "RESTART = False #@param {type:\"boolean\"}\n",
         "if LIMIT < 0: LIMIT=LIMIT*-1\n",
         "\n",
         "ORIG=f\"-o '{ORIG}'\"\n",
@@ -112,14 +112,14 @@
         "is not None else \"\"\n",
         "RESUME=f\"-r\" if RESUME\\\n",
         "is True else \"\"\n",
-        "LIVE=f\"-k\" if LIVE\\\n",
+        "RESTART=f\"-R\" if RESTART\\\n",
         "is True else \"\"\n",
         "LIMIT=f\"-l {LIMIT}\"\n",
         "FILTER=f\"-f '{FILTER}'\" if FILTER\\\n",
         "!= \"all types\" else \"\"\n",
         "\n",
         "!python3.11 auto_forward_messages.py $ORIG $DEST $MODE $QUERY\\\n",
-        "$RESUME $LIMIT $FILTER $LIVE"
+        "$RESUME $LIMIT $FILTER $RESTART"
       ]
     }
   ],
