--- a/Auto_Forward_Messages.ipynb
+++ b/Auto_Forward_Messages.ipynb
@@ -21,28 +21,18 @@
       "outputs": [],
       "source": [
         "#@title *Start*\n",
-        "from os.path import (\n",
-        "  join,exists,split\n",
-        ")\n",
-        "from subprocess import run\n",
         "from google.colab import drive\n",
-        "\n",
         "drive.mount('/content/drive/')\n",
-        "dir=\"/content/drive/MyDrive/Clonechat-Telegram-Colab\"\n",
         "\n",
-        "cmd1=\"add-apt-repository ppa:deadsnakes/ppa;apt-get update;apt-get install python3.11;\"+\\\n",
-        "\"apt-get install python3.11-dev;wget https://bootstrap.pypa.io/get-pip.py && python3.11 get-pip.py\"\n",
-        "cmd2='git clone https://github.com/Drrivao/Clonechat-Telegram-Colab'\n",
-        "cmd3='python3.11 -m pip install tgcrypto https://github.com/Drrivao/pyrogram/archive/refs/heads/master.zip'\n",
-        "cmd4='mv Clonechat-Telegram-Colab /content/drive/MyDrive'\n",
+        "!add-apt-repository ppa:deadsnakes/ppa;apt-get update;apt-get install python3.11;\\\n",
+        "apt-get install python3.11-dev;wget https://bootstrap.pypa.io/get-pip.py && python3.11 get-pip.py\\\n",
+        "python3.11 -m pip install tgcrypto https://github.com/Drrivao/pyrogram/archive/refs/heads/master.zip\n",
         "\n",
-        "run(cmd1,shell=True)\n",
-        "if not exists(dir):\n",
-        "  for cmd in [cmd2,cmd3,cmd4]:\n",
-        "    run(cmd,shell=True)\n",
-        "else:run(cmd3,shell=True)\n",
-        "\n",
-        "%cd $dir"
+        "!mkdir \"/content/drive/MyDrive/Auto Forward Messages\"\n",
+        "%cd \"/content/drive/MyDrive/Auto Forward Messages\"\n",
+        "!rm \"Auto_Forward_Messages.ipynb\" \"auto_forward_messages.py\"\n",
+        "!wget https://raw.githubusercontent.com/Drrivao/Clonechat-Telegram-Colab/main/auto_forward_messages.py\\\n",
+        "https://raw.githubusercontent.com/Drrivao/Clonechat-Telegram-Colab/main/Auto_Forward_Messages.ipynb"
       ]
     },
     {
@@ -93,8 +83,8 @@
       "source": [
         "#@title  *Clonar canal*\n",
         "\n",
-        "ORIG = \"ORIGIN CHAT TITLE\" #@param {type:\"raw\"}\n",
-        "DEST = \"DESTINATION CHAT TITLE (LET IT EMPTY TO CREATE A NEW CHANNEL)\" #@param {type:\"raw\"}\n",
+        "ORIG = \"(link/username/id)\" #@param {type:\"string\"}\n",
+        "DEST = \"(link/username/id)\" #@param {type:\"string\"}\n",
         "\n",
         "MODE=\"user\" #@param [\"user\",\"bot\"]\n",
         "FILTER = \"all types\" #@param [\"all types\", \"photo\", \"text\", \"document\", \"sticker\", \"animation\", \"audio\", \"voice\", \"video\", \"poll\"] {allow-input: true}\n",
