--- a/Auto_Forward_Messages.ipynb
+++ b/Auto_Forward_Messages.ipynb
@@ -24,7 +24,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive/')\n",
         "\n",
-        "!add-apt-repository ppa:deadsnakes/ppa;apt-get update;apt-get install python3.11;\\\n",
+        "!add-apt-repository ppa:deadsnakes/ppa -y;apt-get update;apt-get install python3.11;\\\n",
         "apt-get install python3.11-dev;wget https://bootstrap.pypa.io/get-pip.py && python3.11 get-pip.py\\\n",
         "python3.11 -m pip install tgcrypto https://github.com/Drrivao/pyrogram/archive/refs/heads/master.zip\n",
         "\n",
