removed unnecessary commands

--- a/Auto_Forward_Messages.ipynb
+++ b/Auto_Forward_Messages.ipynb
@@ -25,13 +25,12 @@
         "drive.mount('/content/drive/')\n",
         "\n",
         "!add-apt-repository ppa:deadsnakes/ppa -y;apt-get update;apt-get install python3.11;\\\n",
-        "apt-get install python3.11-dev;wget https://bootstrap.pypa.io/get-pip.py && python3.11 get-pip.py\\\n",
+        "apt-get install python3.11-dev;wget -N https://bootstrap.pypa.io/get-pip.py && python3.11 get-pip.py\\\n",
         "python3.11 -m pip install tgcrypto https://github.com/Drrivao/pyrogram/archive/refs/heads/master.zip\n",
         "\n",
         "!mkdir \"/content/drive/MyDrive/Auto Forward Messages\"\n",
         "%cd \"/content/drive/MyDrive/Auto Forward Messages\"\n",
-        "!rm \"Auto_Forward_Messages.ipynb\" \"auto_forward_messages.py\"\n",
-        "!wget https://raw.githubusercontent.com/Drrivao/Clonechat-Telegram-Colab/main/auto_forward_messages.py\\\n",
+        "!wget -N https://raw.githubusercontent.com/Drrivao/Clonechat-Telegram-Colab/main/auto_forward_messages.py\\\n",
         "https://raw.githubusercontent.com/Drrivao/Clonechat-Telegram-Colab/main/Auto_Forward_Messages.ipynb"
       ]
     },
