--- a/Auto_Forward_Messages.ipynb
+++ b/Auto_Forward_Messages.ipynb
@@ -24,9 +24,10 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive/')\n",
         "\n",
-        "!add-apt-repository ppa:deadsnakes/ppa -y;apt-get update;apt-get install python3.11;\\\n",
-        "apt-get install python3.11-dev;wget -N https://bootstrap.pypa.io/get-pip.py && python3.11 get-pip.py\\\n",
-        "python3.11 -m pip install tgcrypto https://github.com/Drrivao/pyrogram/archive/refs/heads/master.zip\n",
+        "!add-apt-repository ppa:deadsnakes/ppa -y;apt-get update\n",
+        "!apt-get install python3.11 python3.11-dev\n",
+        "!wget -N https://bootstrap.pypa.io/get-pip.py;python3.11 get-pip.py\n",
+        "!python3.11 -m pip install tgcrypto https://github.com/Drrivao/pyrogram/archive/refs/heads/master.zip\n",
         "\n",
         "!mkdir \"/content/drive/MyDrive/Auto Forward Messages\"\n",
         "%cd \"/content/drive/MyDrive/Auto Forward Messages\"\n",
@@ -94,8 +95,7 @@
         "if LIMIT < 0: LIMIT=LIMIT*-1\n",
         "\n",
         "ORIG=f\"-o '{ORIG}'\"\n",
-        "DEST=f\"-d '{DEST}'\" if DEST\\\n",
-        "is not None else \"\"\n",
+        "DEST=f\"-d '{DEST}'\"\n",
         "MODE=f\"-m {MODE}\"\n",
         "QUERY=f\"-q '{QUERY}'\" if QUERY\\\n",
         "is not None else \"\"\n",
