invalid dest username bug fixed

--- a/Auto_Forward_Messages.ipynb
+++ b/Auto_Forward_Messages.ipynb
@@ -95,7 +95,7 @@
         "if LIMIT < 0: LIMIT=LIMIT*-1\n",
         "\n",
         "ORIG=f\"-o '{ORIG}'\"\n",
-        "DEST=f\"-d '{DEST}'\"\n",
+        "DEST=f\"-d '{DEST}'\" if DEST != \"\" else \"\"\n",
         "MODE=f\"-m {MODE}\"\n",
         "QUERY=f\"-q '{QUERY}'\" if QUERY\\\n",
         "is not None else \"\"\n",
