invalid username bug fixed

--- a/Auto_Forward_Messages.ipynb
+++ b/Auto_Forward_Messages.ipynb
@@ -97,18 +97,13 @@
         "ORIG=f\"-o '{ORIG}'\"\n",
         "DEST=f\"-d '{DEST}'\" if DEST != \"\" else \"\"\n",
         "MODE=f\"-m {MODE}\"\n",
-        "QUERY=f\"-q '{QUERY}'\" if QUERY\\\n",
-        "is not None else \"\"\n",
-        "RESUME=f\"-r\" if RESUME\\\n",
-        "is True else \"\"\n",
-        "RESTART=f\"-R\" if RESTART\\\n",
-        "is True else \"\"\n",
+        "QUERY=f\"-q '{QUERY}'\" if QUERY is not None else \"\"\n",
+        "RESUME=f\"-r\" if RESUME is True else \"\"\n",
+        "RESTART=f\"-R\" if RESTART is True else \"\"\n",
         "LIMIT=f\"-l {LIMIT}\"\n",
-        "FILTER=f\"-f '{FILTER}'\" if FILTER\\\n",
-        "!= \"all types\" else \"\"\n",
+        "FILTER=f\"-f '{FILTER}'\" if FILTER != \"all types\" else \"\"\n",
         "\n",
-        "!python3.11 auto_forward_messages.py $ORIG $DEST $MODE $QUERY\\\n",
-        "$RESUME $LIMIT $FILTER $RESTART"
+        "!python3.11 auto_forward_messages.py $ORIG $DEST $MODE $QUERY $RESUME $LIMIT $FILTER $RESTART"
       ]
     }
   ],
