--- a/Auto_Forward_Messages.ipynb
+++ b/Auto_Forward_Messages.ipynb
@@ -24,10 +24,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive/')\n",
         "\n",
-        "!add-apt-repository ppa:deadsnakes/ppa -y;apt-get update\n",
-        "!apt-get install python3.11 python3.11-dev\n",
-        "!wget -N https://bootstrap.pypa.io/get-pip.py;python3.11 get-pip.py\n",
-        "!python3.11 -m pip install tgcrypto https://github.com/Drrivao/pyrogram/archive/refs/heads/master.zip\n",
+        "!pip install tgcrypto https://github.com/Drrivao/pyrogram/archive/refs/heads/master.zip\n",
         "\n",
         "!mkdir \"/content/drive/MyDrive/Auto Forward Messages\"\n",
         "%cd \"/content/drive/MyDrive/Auto Forward Messages\"\n",
@@ -69,7 +66,7 @@
         "API_ID=f\"-i '{API_ID}'\"\n",
         "API_HASH=f\"-s '{API_HASH}'\"\n",
         "\n",
-        "!python3.11 auto_forward_messages.py $API_ID $API_HASH $BOT_TOKEN"
+        "!python auto_forward_messages.py $API_ID $API_HASH $BOT_TOKEN"
       ]
     },
     {
@@ -103,7 +100,7 @@
         "LIMIT=f\"-l {LIMIT}\"\n",
         "FILTER=f\"-f '{FILTER}'\" if FILTER != \"all types\" else \"\"\n",
         "\n",
-        "!python3.11 auto_forward_messages.py $ORIG $DEST $MODE $QUERY $RESUME $LIMIT $FILTER $RESTART"
+        "!python auto_forward_messages.py $ORIG $DEST $MODE $QUERY $RESUME $LIMIT $FILTER $RESTART"
       ]
     }
   ],
